BUGFIX: images in insert_flickr/attachment details had squished images on retina picturefill

--- a/static/css/media-upload-basic.css
+++ b/static/css/media-upload-basic.css
@@ -39,7 +39,7 @@
 }
 .attachment-info .thumbnail, .attachment-info .thumbnail img {
     max-width: 240px; /* default is 120px, but let's make it larger because we can */
-    max-height: 240px;
+    max-height: 100%; /* prevents squished images */
 }
 .attachments-browser .attachments {
     top:70px; /* leave enough room for an error */
